added user points

--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -2,7 +2,28 @@
 
 {% block content %}
 
-Welcome to Capitals quiz!
-<a href="{% url 'question' %}">START</a>
+<h1>CAPITALS</h1>
+<a role="button" class="btn btn-primary btn-lg" href="{% url 'question' %}">Začni igro</a>
+<h2>NAJBOLJŠI IGRALCI</h2>
+<div id="leaderboard">
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Uporabnik</th>
+                <th scope="col">Točke</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for username, points in user_list %}
+            <tr>
+                <th scope="row">{{ forloop.counter }}</th>
+                <td>{{ username }}</td>
+                <td>{{ points }}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
 
 {% endblock %}
