--- a/templates/base.html
+++ b/templates/base.html
@@ -11,13 +11,29 @@
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'core/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
 
     <title>Capitals</title>
 </head>
 
 <body>
-{% block content %}{%endblock%}
+
+    <nav class="navbar navbar-expand-lg navbar-custom">
+        <a class="navbar-brand" href="{% url 'index'%}">Domov</a>
+        {% if user.is_authenticated %}
+        <span class="navbar-brand mb-0 h1">Uporabnik: {{ user.get_username }}</span>
+        {% load pinax_points_tags %}
+        {% points_for_object user as points %}
+        <span class="navbar-brand mb-0 h1">Točke: {{ points }}</span>
+        <a class="navbar-brand" href="{% url 'logout'%}?next={{request.path}}">Odjava</a>
+        {% else %}
+        <a class="navbar-brand" href="{% url 'login'%}?next={{request.path}}">Prijava</a>
+        {% endif %}
+    </nav>
+    
+    <div id="content">
+    {% block content %}{%endblock%}
+    </div>
 
 </body>
 
