--- a/templates/core/question.html
+++ b/templates/core/question.html
@@ -5,9 +5,10 @@
 {% if name %}
 <form action="{% url 'results' %}" method="POST">
     {% csrf_token %}
-    <p id="question">Kaj je glavno mesto države {{ name }}?</p><br>
+    <p id="question">Kaj je glavno mesto države {{ name }}?</p>
     
     <input type="hidden" name="correct_answer" value="{{correct_answer}}">
+    <input type="hidden" name="user" value="{{correct_answer}}">
     {% for answer in possible_answers %}
     <div class="form-check">
         <input class="form-check-input" type="radio" name="capital" value="{{ answer }}">
@@ -16,11 +17,11 @@
         </label>
     </div>
     {% endfor %}
-    <br><button type="submit" class="btn btn-primary">Submit</button>
+    <br><button type="submit" class="btn btn-primary">Pošlji</button>
 </form>
 
 {% else %}
-<p>No questions are available.</p>
+<p>Ni vprašanj na voljo!</p>
 {% endif %}
 
 {% endblock %}
