--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -3,8 +3,9 @@
 {% block content %}
 
 <h1>CAPITALS</h1>
+<br>
 <a role="button" class="btn btn-primary btn-lg" href="{% url 'question' %}">Začni igro</a>
-<h2>NAJBOLJŠI IGRALCI</h2>
+<h2 class="mt-20">NAJBOLJŠI IGRALCI</h2>
 <div id="leaderboard">
     <table class="table">
         <thead>
